2007-12-19  Anupam Sengupta  <anupamsg@gmail.com>

	* Rakefile: Fixed a problem with reading the Tree::VERSION for the
	gem packaging, if any prior version of the gem is already installed.

2007-12-18  Anupam Sengupta  <anupamsg@gmail.com>

	* lib/tree.rb: Updated the marshalling logic to correctly handle
	non-string content.
	(Tree::TreeNode::createDumpRep): Minor code change to use symbols
	instead of string key names.
	(Tree): Version number change to 0.5.0
	(Tree::TreeNode::hasContent): Minor fix to the comments.

	* test/test_tree.rb (TC_TreeTest::test_breadth_each): Updated test
	cases for the marshalling logic.

2007-11-12  Anupam Sengupta  <anupamsg@gmail.com>

	* test/test_binarytree.rb: Minor documentation correction.

	* lib/tree/binarytree.rb (Tree::BinaryTreeNode::isRightChild):
	Minor documentation change.

2007-10-10  Anupam Sengupta  <anupamsg@gmail.com>

	* README: Restructured the format.

	* Rakefile: Added Hoe related logic. If not present, the Rakefile
	will default to old behavior.

2007-10-09  Anupam Sengupta  <anupamsg@gmail.com>

	* Rakefile: Added setup.rb related tasks. Also added the setup.rb in the PKG_FILES list.

2007-10-01  Anupam Sengupta  <anupamsg@gmail.com>

	* Rakefile: Added an optional task for rcov code coverage.
	  Added a dependency for rake in the Gem Specification.

	* test/test_binarytree.rb: Removed the unnecessary dependency on "Person" class.

	* test/test_tree.rb: Removed dependency on the redundant "Person" class.
	(TC_TreeTest::test_comparator): Added a new test for the spaceship operator.
	(TC_TreeTest::test_hasContent): Added tests for hasContent? and length methods.

2007-08-30  Anupam Sengupta  <anupamsg@gmail.com>

	* test/test_tree.rb (TC_TreeTest::test_preordered_each, TC_TreeTest::test_breadth_each, TC_TreeTest::test_detached_copy):
	Added new tests for the new functions added to tree.rb.

	* lib/tree.rb (Tree::TreeNode::detached_copy, Tree::TreeNode::preordered_each, Tree::TreeNode::breadth_each):