@@ -1,5 +1,8 @@
 2007-12-19  Anupam Sengupta  <anupamsg@gmail.com>
 
+	* lib/tree.rb (Tree::TreeNode::initialize): Removed the
+	unnecessary self_initialize method.
+
 	* Rakefile: Fixed a problem with reading the Tree::VERSION for the
 	gem packaging, if any prior version of the gem is already installed.
 
